--- a/slave/Dockerfile
+++ b/slave/Dockerfile
@@ -14,7 +14,7 @@ RUN /tmp/download-spark.sh && tar xfz /tmp/spark-${SPARK_VERSION}-bin-hadoop${HA
 ENV SPARK_HOME="/opt/spark-${SPARK_VERSION}-bin-hadoop${HADOOP_VERSION}"
 
 COPY start-spark.sh /usr/bin/start-spark.sh
+COPY start-slave.sh ${SPARK_HOME}/sbin/start-slave.sh
 
-COPY start-master.sh ${SPARK_HOME}/sbin/start-master.sh
-EXPOSE 7077 8080 6066
+# EXPOSE 7077 8080 6066
 ENTRYPOINT ["start-spark.sh"]
