--- a/slave/Dockerfile
+++ b/slave/Dockerfile
@@ -16,5 +16,5 @@ ENV SPARK_HOME="/opt/spark-${SPARK_VERSION}-bin-hadoop${HADOOP_VERSION}"
 COPY start-spark.sh /usr/bin/start-spark.sh
 COPY start-slave.sh ${SPARK_HOME}/sbin/start-slave.sh
 
-# EXPOSE 7077 8080 6066
+EXPOSE 8081
 ENTRYPOINT ["start-spark.sh"]
