env variable for spark corebridge jars

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   spark-master:
-    build: . 
+    build: .
     ports:
       - "2222:22"
       - "8081:8080"
@@ -10,10 +10,16 @@ services:
     environment:
       SPARK_INSTANCE_TYPE: master
       SPARK_MASTER_HOST: spark-master
+    volumes:
+      - ${CORE_BRIDGES_PATH}:${CORE_BRIDGES_PATH}
+
   spark-slave:
     build: .
     environment:
       SPARK_INSTANCE_TYPE: slave
       SPARK_MASTER_HOST: spark-master
+    volumes:
+      - ${CORE_BRIDGES_PATH}:${CORE_BRIDGES_PATH}
+
     links:
       - spark-master
